--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>Select a resource below</p>
 
     <section class="grid">
-      <a class="btn" href="PASTE_VIDEO_TUTORIAL_LINK_HERE" target="_blank" rel="noopener">
+      <a class="btn" href="https://www.youtube.com/watch?v=IHM6ZXHnnQI" target="_blank" rel="noopener">
         Video Tutorial <span class="arrow">↗</span>
       </a>
 
@@ -99,3 +99,4 @@
   </main>
 </body>
 </html>
+
